// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PureInboxScreen default 1`] = `
<div>
  <div
    class="page lists-show"
  >
    <nav>
      <h1
        class="title-page"
      >
        <span
          class="title-wrapper"
        >
          Taskbox
        </span>
      </h1>
    </nav>
     
    <div>
      <div>
        <!---->
         
        <!---->
         
        <div
          class="list-items"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="disabled"
                name="checked"
                type="checkbox"
              />
               
              <span
                class="checkbox-custom"
              />
            </label>
             
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="readonly"
                type="text"
              />
            </div>
             
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="disabled"
                name="checked"
                type="checkbox"
              />
               
              <span
                class="checkbox-custom"
              />
            </label>
             
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="readonly"
                type="text"
              />
            </div>
             
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="disabled"
                name="checked"
                type="checkbox"
              />
               
              <span
                class="checkbox-custom"
              />
            </label>
             
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="readonly"
                type="text"
              />
            </div>
             
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="disabled"
                name="checked"
                type="checkbox"
              />
               
              <span
                class="checkbox-custom"
              />
            </label>
             
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="readonly"
                type="text"
              />
            </div>
             
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="disabled"
                name="checked"
                type="checkbox"
              />
               
              <span
                class="checkbox-custom"
              />
            </label>
             
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="readonly"
                type="text"
              />
            </div>
             
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="disabled"
                name="checked"
                type="checkbox"
              />
               
              <span
                class="checkbox-custom"
              />
            </label>
             
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="readonly"
                type="text"
              />
            </div>
             
            <div
              class="actions"
            >
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PureInboxScreen error 1`] = `
<div>
  <div
    class="page lists-show"
  >
    <div
      class="wrapper-message"
    >
      <span
        class="icon-face-sad"
      />
       
      <div
        class="title-message"
      >
        Oh no!
      </div>
       
      <div
        class="subtitle-message"
      >
        Something went wrong
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task archived 1`] = `
<div
  class="list-item TASK_ARCHIVED"
>
  <label
    class="checkbox"
  >
    <input
      disabled="disabled"
      name="checked"
      type="checkbox"
    />
     
    <span
      class="checkbox-custom"
    />
  </label>
   
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly="readonly"
      type="text"
    />
  </div>
   
  <div
    class="actions"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots Task default 1`] = `
<div
  class="list-item TASK_INBOX"
>
  <label
    class="checkbox"
  >
    <input
      disabled="disabled"
      name="checked"
      type="checkbox"
    />
     
    <span
      class="checkbox-custom"
    />
  </label>
   
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly="readonly"
      type="text"
    />
  </div>
   
  <div
    class="actions"
  >
    <a>
      <span
        class="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task pinned 1`] = `
<div
  class="list-item TASK_PINNED"
>
  <label
    class="checkbox"
  >
    <input
      disabled="disabled"
      name="checked"
      type="checkbox"
    />
     
    <span
      class="checkbox-custom"
    />
  </label>
   
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly="readonly"
      type="text"
    />
  </div>
   
  <div
    class="actions"
  >
    <a>
      <span
        class="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList default 1`] = `
<div
  style="padding: 3rem;"
>
  <div>
    <!---->
     
    <!---->
     
    <div
      class="list-items"
    >
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList empty 1`] = `
<div
  style="padding: 3rem;"
>
  <div>
    <!---->
     
    <div
      class="list-items"
    >
      <div
        class="wrapper-message"
      >
        <span
          class="icon-check"
        />
         
        <div
          class="title-message"
        >
          You have no tasks
        </div>
         
        <div
          class="subtitle-message"
        >
          Sit back and relax
        </div>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots TaskList loading 1`] = `
<div
  style="padding: 3rem;"
>
  <div>
    <div
      class="list-items"
    >
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
      <div
        class="loading-item"
      >
        <span
          class="glow-checkbox"
        />
         
        <span
          class="glow-text"
        >
          <span>
            Loading
          </span>
           
          <span>
            cool
          </span>
           
          <span>
            state
          </span>
        </span>
      </div>
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots TaskList withPinnedTasks 1`] = `
<div
  style="padding: 3rem;"
>
  <div>
    <!---->
     
    <!---->
     
    <div
      class="list-items"
    >
      <div
        class="list-item TASK_PINNED"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="disabled"
            name="checked"
            type="checkbox"
          />
           
          <span
            class="checkbox-custom"
          />
        </label>
         
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="readonly"
            type="text"
          />
        </div>
         
        <div
          class="actions"
        >
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
